display the parsed result

--- a/index.css
+++ b/index.css
@@ -1,3 +1,17 @@
-video,canvas {
+video, canvas {
   max-width: 100%;
+}
+
+.camera-container {
+  width: 50%;
+}
+
+.result-container {
+  display: flex;
+  align-items: flex-start;
+}
+
+canvas {
+  width: 50%;
+  object-fit: contain;
 }
